add_library(sdp_solve)
target_sources(sdp_solve
                PRIVATE
                Solver_Parameters/Solver_Parameters.cxx
                Solver_Parameters/ostream.cxx
                Solver_Parameters/to_property_tree.cxx
                Archive_Reader/Archive_Reader.cxx
                Archive_Reader/underflow.cxx
                Block_Info/Block_Info.cxx
                Block_Info/read_block_info.cxx
                Block_Info/read_block_costs.cxx
                Block_Info/allocate_blocks.cxx
                SDP/SDP/SDP.cxx
                SDP/SDP/read_normalization.cxx
                SDP/SDP/read_objectives.cxx
                SDP/SDP/assign_bilinear_bases_dist.cxx
                SDP/SDP/read_block_data/read_block_data.cxx
                SDP/SDP/read_block_data/SDP_Block_Data.cxx
                SDP/SDP/set_bases_blocks.cxx
                SDP_Solver/save_checkpoint.cxx
                SDP_Solver/load_checkpoint/load_checkpoint.cxx
                SDP_Solver/load_checkpoint/load_binary_checkpoint.cxx
                SDP_Solver/load_checkpoint/load_text_checkpoint.cxx
                SDP_Solver/SDP_Solver.cxx
                SDP_Solver/run/run.cxx
                SDP_Solver/run/cholesky_decomposition.cxx
                SDP_Solver/run/constraint_matrix_weighted_sum.cxx
                SDP_Solver/run/compute_dual_residues_and_error.cxx
                SDP_Solver/run/compute_primal_residues_and_error_P_Ax_X.cxx
                SDP_Solver/run/compute_primal_residues_and_error_p_b_Bx.cxx
                SDP_Solver/run/compute_objectives/compute_objectives.cxx
                SDP_Solver/run/compute_objectives/dot.cxx
                SDP_Solver/run/compute_bilinear_pairings/compute_bilinear_pairings.cxx
                SDP_Solver/run/compute_bilinear_pairings/compute_A_X_inv.cxx
                SDP_Solver/run/compute_bilinear_pairings/compute_A_Y.cxx
                SDP_Solver/run/compute_feasible_and_termination.cxx
                SDP_Solver/run/print_header.cxx
                SDP_Solver/run/print_iteration.cxx
                SDP_Solver/run/step/step.cxx
                SDP_Solver/run/step/initialize_schur_complement_solver/initialize_schur_complement_solver.cxx
                SDP_Solver/run/step/initialize_schur_complement_solver/compute_schur_complement.cxx
                SDP_Solver/run/step/initialize_schur_complement_solver/initialize_Q_group.cxx
                SDP_Solver/run/step/initialize_schur_complement_solver/synchronize_Q.cxx
                SDP_Solver/run/step/compute_search_direction/compute_search_direction.cxx
                SDP_Solver/run/step/compute_search_direction/cholesky_solve.cxx
                SDP_Solver/run/step/compute_search_direction/compute_schur_RHS.cxx
                SDP_Solver/run/step/compute_search_direction/scale_multiply_add.cxx
                SDP_Solver/run/step/compute_search_direction/solve_schur_complement_equation.cxx
                SDP_Solver/run/step/predictor_centering_parameter.cxx
                SDP_Solver/run/step/corrector_centering_parameter/corrector_centering_parameter.cxx
                SDP_Solver/run/step/corrector_centering_parameter/frobenius_product_of_sums.cxx
                SDP_Solver/run/step/frobenius_product_symmetric.cxx
                SDP_Solver/run/step/step_length/step_length.cxx
                SDP_Solver/run/step/step_length/min_eigenvalue.cxx
                SDP_Solver/run/step/step_length/lower_triangular_inverse_congruence.cxx
                SDP_Solver_Terminate_Reason/ostream.cxx
                lower_triangular_transpose_solve.cxx
                Block_Diagonal_Matrix/ostream.cxx
                Write_Solution.cxx)                        
target_link_libraries(sdp_solve
                        PRIVATE
                        ${USE_PACKAGES}
                        Boost::iostreams
                        Boost::stacktrace_basic
                        Boost::stacktrace_addr2line
                        Boost::stacktrace_noop
                        Boost::program_options
                        dl
                        sdpb_util
                        pmp2sdp_lib)